Wed Jun 17 16:57:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* load.c (rb_f_require): RDoc updated.  a patch from Run Paint Run
	  Run in [ruby-core:23833].

	* load.c (rb_mod_autoload): ditto.  [ruby-core:23835]

Wed Jun 17 14:37:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sample/test.rb (valid_syntax?): skips BOM.  [ruby-dev:38666]

	* test/ruby/test_system.rb (TestSystem#valid_syntax?): ditto.

Wed Jun 17 13:54:18 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/strscan/strscan.c (Init_strscan): remove obsolete
	  matchedsize method, use matched_size instead.  [ruby-dev:38591]

Wed Jun 17 12:37:37 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* thread.c (ruby_thread_stack_overflow): call rb_exc_raise() on
	  stack overflows in the signal handler, if sigaltstack is
	  available.  On stack overflow (and with sigaltstack), the signal
	  handler is more likely to have room to create an exception
	  object.  [ruby-core:23813]

Wed Jun 17 08:10:38 2009  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace: added.  objspace library extends some methods to
	  ObjectSpace module.

Wed Jun 17 08:14:01 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_coerce): accepts Complex instances.

	* rational.c (nurat_coerce): accepts Rational
	  instances. [ruby-core:23859]

Wed Jun 17 07:36:22 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httputils.rb (parse_form_data): escape boundary of
	  multipart/form-data when embed in regexp.

Wed Jun 17 07:24:26 2009  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_memsize): added.

	* io.c (rb_io_memsize): added.

	* regcomp.c (onig_memsize): added.

	* string.c (rb_str_memsize): added.

	* transcode.c (rb_transcoding_memsize, rb_econv_memsize): added.

	* variable.c (rb_geneic_ivar_memsize): added.

Wed Jun 17 07:04:33 2009  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_memsize): added.  Use RTypedData instead of RData
	  for ISeq.
