@@ -1,3 +1,14 @@
+Wed Jun 17 21:25:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* bignum.c (rb_big_fdiv): checks whether the given second argument
+	  can be converted to float properly.
+
+	* numeric.c (fix_fdiv): calls rb_big_fdiv when the given second
+	  argument is a bignum.
+
+	* rational.c (nurat_fdiv): should calculate Float(x/y), not
+	  Float(x)/Float(y).
+
 Wed Jun 17 16:57:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* load.c (rb_f_require): RDoc updated.  a patch from Run Paint Run
